# random-demon-roulette

./: CMakeLists.txt  mod.json
.github/workflows/: build.yml
src/: MenuLayerHook.cpp  PlayLayerHook.cpp  RandomRouletteLayer.cpp  RandomRouletteLayer.hpp  RandomRouletteManager.cpp  RandomRouletteManager.hpp  main.cpp
